added new images and fixed address

--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
             >
               <li>
                 <a
-                  href="#section1"
+                  href="#sectionOne"
                 >
                   ОПИСАНИЕ МОДЕЛИ БИЗНЕСА
                 </a>
               </li>
               <li>
                 <a
-                  href="#section2"
+                  href="#sectionTwo"
                 >
                   КОНКУРЕНТНАЯ СРЕДА
                 </a>
               </li>
               <li>
                 <a
-                  href="#section3"
+                  href="#sectionThree"
                 >
                   КОНКУРЕНТНОЕ ПРЕИМУЩЕСТВО
                 </a>
               </li>
               <li>
                 <a
-                  href="#section4"
+                  href="#sectionFour"
                 >
                   ЦИКЛ РАБОТЫ
                 </a>
@@ -55,7 +55,7 @@
           </header>
           <div class="mainWrapper">
             <div class="mainTextWrapper">
-              <h1>Группакомпаний S&P</h1>
+              <h1>S&P group</h1>
               <h1>Сбытовое подразделение</h1>
             </div>
             <div class="placeHolder"></div>
@@ -65,7 +65,7 @@
               class="heroImage"
             />
           </div>
-          <div id="#section1" class="section1">
+          <div id="sectionOne" class="section1">
             <h2>ОПИСАНИЕ МОДЕЛИ БИЗНЕСА</h2>
             <div class="cardWrapper">
               <div class="card">
@@ -74,13 +74,6 @@
                   Производитель
                 </h3>
                 <ul class="cardItem">
-                  <!-- {cardItems.map((item) => {
-                    return (
-                      <>
-                        <li>{item}</li>
-                      </>
-                    );
-                  })} -->
                 </ul>
               </div>
               <div class="card">
@@ -89,15 +82,6 @@
                   Производитель и S&P group ✔
                 </h3>
                 <ul class="cardItem">
-                  <!-- {cardItems.map((item, index) => {
-                    return (
-                      <>
-                        <li>
-                          {index === 0 || index === 2 ? " " : "✔"} {item}
-                        </li>
-                      </>
-                    );
-                  })} -->
                 </ul>
               </div>
               <div class="card">
@@ -118,7 +102,7 @@
               </div>
             </div>
           </div>
-          <div id="section2" class="section2">
+          <div id="sectionTwo" class="section2">
             <h2>КОНКУРЕНТНАЯ СРЕДА</h2>
             <div class="sectionWrapper">
               <div class="sectionContentWrapper">
@@ -222,7 +206,8 @@
               </div>
             </div>
           </div>
-          <div id="#section3" class="section3" >
+          <div id="sectionThree" class="section3" >
+            <div class="section3container">
             <h2>КОНКУРЕНТНОЕ ПРЕИМУЩЕСТВО</h2>
             <ul class="section3Content">
               <li>✔ Мы не улучшаем и оптимизируем, мы делаем на лучшем</li>
@@ -234,7 +219,9 @@
               <li> ✔Эксклюзив – фокус на исполнение, а не на конкуренцию</li>
             </ul>
           </div>
-          <div class="section4" id="section4">
+          </div>
+          <div class="section4" id="sectionFour">
+            <div class="section4Container">
             <h2>ЦИКЛ РАБОТЫ</h2>
             <ul class="section4Content">
               <li>
@@ -252,6 +239,7 @@
               <li>Управление продажами</li>
             </ul>
           </div>
+          </div>
           <footer class="section7">
             <div class="textWrapper">
               <h2>Группа Компаний S&P group</h2>
@@ -268,9 +256,13 @@
             </div>
             <div class="addressWrapper">
               <p>
-                Группа Компаний S&P group, 125009, г. Москва, ул. Большая <br />
-                Дмитровка,дом 23, строение 1 оф. 46. Тел. :+7 8001019753 <br />
-                Генеральный Директор Сиротин Дмитрий+7 968 963 1611
+                Группа Компаний S&P Group, <br />125009, г. Москва, ул. Большая 
+                Дмитровка,дом 21, Тел. :+7 495 19 77 409 <br />
+                Руководител S&P Group  <br/> Дмитрий Сиротин: <br> +7 968 963 1611
+                <div class="mailWrapper">
+                  <img src="./images/mail.png" alt="mail icon">
+                  <p>Dmitriy.sirotin@snp-group.ru</p>
+                </div>
               </p>
             </div>
           </footer>
