small change on hero section

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
               <h1>Сбытовое подразделение</h1>
             </div>
             <div class="placeHolder"></div>
-            <img
+            <!-- <img
               src="./images/box.png"
               alt="hero"
               class="heroImage"
-            />
+            /> -->
           </div>
           <div id="sectionOne" class="section1">
             <h2>ОПИСАНИЕ МОДЕЛИ БИЗНЕСА</h2>
