--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
           <div class="container">
         <div class="Wrapper">
           <header class="headerWrapper">
-        
               <a href="/">
                 <Image
                   width="150"
@@ -21,7 +20,7 @@
                 />
               </a>
             <ul
-              class="navWrapper"
+              class="navWrapper navWrapperMobileSlidOut"
             >
               <li>
                 <a
@@ -51,7 +50,9 @@
                   ЦИКЛ РАБОТЫ
                 </a>
               </li>
+              <li class="closeBtn">Закрыть</li>
             </ul>
+          <img src="./images/btnMenu.png" alt="menu button" class="btnMenu">
           </header>
           <div class="mainWrapper">
             <div class="mainTextWrapper">
@@ -68,7 +69,7 @@
           <div id="sectionOne" class="section1">
             <h2>ОПИСАНИЕ МОДЕЛИ БИЗНЕСА</h2>
             <div class="cardWrapper">
-              <div class="card">
+              <div class="card card1">
                 <h3>
                   Классическая модель <br />
                   Производитель
@@ -76,7 +77,7 @@
                 <ul class="cardItem">
                 </ul>
               </div>
-              <div class="card">
+              <div class="card card2">
                 <h3>
                   Классическая модель <br />
                   Производитель и S&P group ✔
@@ -84,7 +85,7 @@
                 <ul class="cardItem">
                 </ul>
               </div>
-              <div class="card">
+              <div class="card card3">
                 <h3>S&P group обеспечивает</h3>
                 <ul class="cardItem">
                   <li>
