added mail and call functionality to the links on contact

--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
             <div class="addressWrapper">
               <p>
                 Группа Компаний S&P Group, <br />125009, г. Москва, ул. Большая 
-                Дмитровка,дом 21, Тел. :+7 495 19 77 409 <br />
-                Руководител S&P Group  <br/> Дмитрий Сиротин: <br> +7 968 963 1611
+                Дмитровка,дом 21, Тел. :<a href="tel:+74951977409">+7 495 19 77 409 </a><br /> 
+                Руководител S&P Group  <br/> Дмитрий Сиротин: <br><a href="tel:+79689631611"> +7 968 963 1611</a>
                 <div class="mailWrapper">
                   <img src="./images/mail.png" alt="mail icon">
-                  <p>Dmitriy.sirotin@snp-group.ru</p>
+                   <a href="mailto:dmitriy.sirotin@snp-group.ru"><p>Dmitriy.sirotin@snp-group.ru</p></a>
                 </div>
               </p>
             </div>
