fixed 1920 reslution problem

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             </div>
           </div>
-          <div id="sectionOne" class="section1">
+          <div id="sectionOne" class="section1 fullHight">
             <div class="section1Container">
             <h2>ОПИСАНИЕ МОДЕЛИ БИЗНЕСА</h2>
             <div class="cardWrapper">
@@ -98,7 +98,7 @@
                   </li>
                   <li>✔ Работы оплачиваются производителем</li>
                   <li>
-                    ✔ S&P имеет эксклюзив 3-10 лет и основной доход -% с оборота
+                    ✔ S&P имеет эксклюзив 3-10 лет и <br> основной доход -% с оборота
                     (5-35)
                   </li>
                 </ul>
@@ -106,7 +106,7 @@
             </div>
             </div>
           </div>
-          <div id="sectionTwo" class="section2">
+          <div id="sectionTwo" class="section2 fullHight">
             <div class="section2Container">
             <h2>КОНКУРЕНТНАЯ СРЕДА</h2>
             <div class="sectionWrapper">
@@ -212,7 +212,7 @@
             </div>
             </div>
           </div>
-          <div id="sectionThree" class="section3" >
+          <div id="sectionThree" class="section3 fullHight" >
             <div class="section3container">
             <h2>КОНКУРЕНТНОЕ ПРЕИМУЩЕСТВО</h2>
             <ul class="section3Content">
@@ -226,7 +226,7 @@
             </ul>
           </div>
           </div>
-          <div class="section4" id="sectionFour">
+          <div class="section4 fullHight" id="sectionFour">
             <div class="section4Container">
             <h2>ЦИКЛ РАБОТЫ</h2>
             <ul class="section4Content">
@@ -263,7 +263,7 @@
             <div class="addressWrapper">
               <p>
                 Группа Компаний S&P Group, <br />125009, г. Москва, ул. Большая 
-                Дмитровка,дом 21, Тел. :<a href="tel:+74951977409">+7 495 19 77 409 </a><br /> 
+                Дмитровка,дом 21, <br> Тел. :<a href="tel:+74951977409">+7 495 19 77 409 </a><br /> 
                 Руководител S&P Group  <br/> Дмитрий Сиротин: <br><a href="tel:+79689631611"> +7 968 963 1611</a>
                 <div class="mailWrapper">
                   <img src="./images/mail.png" alt="mail icon">
