added white-space in line css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     ✔ Предоставление более высокого качества и оптимальной цены
                   </li>
                   <li>✔ Работы оплачиваются производителем</li>
-                  <li>
+                  <li style="white-space: nowrap;">
                     ✔ S&P имеет эксклюзив 3-10 лет и <br> основной доход -% с оборота
                     (5-35)
                   </li>
